// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Pages Certifications page renders correctly, calls CertificationList, and matches snapshot 1`] = `
<div
  class="content-block"
  id="certifications"
>
  <h2
    class="h2 mb-0 font-extrabold text-content-header"
  >
    CERTIFICATIONS
  </h2>
  <div
    class="flex flex-col gap-8"
  />
</div>
`;

exports[`Content Pages Education page renders correctly, calls EducationList, and matches snapshot 1`] = `
<div
  class="content-block"
  id="education"
>
  <h2
    class="h2 mb-0 font-extrabold text-content-header"
  >
    EDUCATION
  </h2>
  <div
    class="flex flex-col gap-8"
  />
</div>
`;

exports[`Content Pages Experience page renders correctly, calls ExperienceList, and matches snapshot 1`] = `
<div
  class="content-block"
  id="experience"
>
  <h2
    class="h2 mb-0 font-extrabold text-content-header"
  >
    EXPERIENCE
  </h2>
  <div
    class="flex flex-col gap-8"
  />
</div>
`;

exports[`Content Pages Projects page renders correctly, calls ProjectList, and matches snapshot 1`] = `
<div
  class="content-block"
  id="projects"
>
  <h2
    class="h2 mb-0 font-extrabold text-content-header"
  >
    PROJECTS
  </h2>
  <div
    class="flex flex-col gap-8"
  />
</div>
`;

exports[`Content Pages Skills page renders correctly, calls SkillHighlight, SkillButton, LanguageItem, and matches snapshot 1`] = `
<div
  class="content-block"
  id="skills"
>
  <h2
    class="h2 mb-0 font-extrabold text-content-header"
  >
    SKILLS
  </h2>
  <div
    class="flex flex-col gap-8"
  >
    <div
      class="flex flex-col gap-3"
    />
    <div
      class="flex flex-col gap-3"
    >
      <h3
        class="mb-0 font-extrabold leading-snug text-content-subtitle max-sm:text-sm sm:text-xs md:text-base"
      >
        Interested in:
      </h3>
    </div>
    <div
      class="flex flex-col gap-3"
    >
      <h3
        class="mb-0 font-extrabold leading-snug text-content-subtitle max-sm:text-sm sm:text-xs md:text-base"
      >
        I speak
      </h3>
    </div>
  </div>
</div>
`;
